# KDHS-messenger

./: LICENSE.md  README.md  ToDo.md  chat_create_test.py  main.py  pyproject.toml  settings.pickle  settings.py  start.bat  te.py  test.py  test_notify.py
libs/: chat.py  colors.py  data.py  exceptions.py  message.py  models.py  notify.py  server.py  settings.py  snackcontroller.py  tempCodeRunnerFile.py  user.py  websocket.py
libs/components/: chat_bubble.kv  chat_bubble.py  chat_create_popup.kv  chat_create_popup.py  listitem.kv  listitem.py  profile_popup.kv  profile_popup.py  settings_item.kv  settings_item.py  snackbar.kv  snackbar.py  text_input_round.kv  text_input_round.py  textfield_popup.kv  textfield_popup.py
libs/screen_manager/: screen_manager.kv  screen_manager.py
libs/screens/: login_screen.kv  login_screen.py  main_screen.kv  main_screen.py  register_screen.kv  register_screen.py  settings_chat_screen.kv  settings_chat_screen.py  settings_profile_screen.kv  settings_profile_screen.py  settings_screen.kv  settings_screen.py
libs/utils/: behaviors.py  checks.py  protocols.py  window.py
