[tool.poetry]
name = "kdhs messenger"
version = "0.1.0"
description = "Kivy+Django HTTPS+Socket messaging app"
authors = ["Papr1ka"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.1.0"
DateTime = "^4.5"
kivymd = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
